# rpminspect-data-fedora

./: .gitignore  .mailmap  AUTHORS  AUTHORS.md  GNUmakefile  Makefile  README  fedora.yaml  license_keys_unique.sh  meson.build  release.sh  rpminspect-data-fedora.spec.in  rpminspect-fedora  rpminspect.conf  rpminspect.yaml  srpm.sh
.copr/: Makefile  installate-package.sh
abi/: rawhide
abi-checking-whitelist/: rawhide
capabilities/: f29  fc37  fc38  fc41  fc49  rawhide
desktop/: f34
fileinfo/: f28  f29  f30  f31  f32  f35  fc29  fc30  fc31  fc32  fc33  fc34  fc35  fc36  fc37  fc38  fc39  fc40  fc41  fc42  fc47  rawhide
icons/: fc35  fc36
licenses/: fedora.json
political-whitelist/: taiwan-flags
politics/: rawhide
profiles/: scl.conf  scl.yaml
profiles/fedora/: rawhide.yaml  scl.yaml
rebaseable/: fc36  rawhide
remedy/: fedora.toml
security/: fc34  fc37  fc38  fc39  fc40  fc41  fc42
st_mode/: f30
stat-whitelist/: f29  f30  f31  f32  rawhide
utils/: release.sh  srpm.sh  submit-koji-builds.sh
version-whitelist/: rawhide
